# zudo-file-viewer

./: .gitignore  CLAUDE.md  README.md  index-mock.html  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.mock.ts  vite.config.ts  vitest.config.ts
.claude/skills/b4push/: skill.md
.github/workflows/: ci.yml
scripts/: run-b4push.sh
src/: app.tsx  main-mock.tsx  main.tsx  settings-context.tsx  tailwind.css  tokens.css  types.ts
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: files.rs  images.rs  mod.rs  settings.rs
src/backend/: index.ts  mock-adapter.ts  tauri-adapter.ts  types.ts
src/components/: thumbnail-grid.tsx  toast.test.tsx  toast.tsx  toolbar.tsx
src/components/file-tree/: file-tree.test.tsx  file-tree.tsx  icons.tsx  index.ts  tree-shared.tsx
src/components/viewer/: file-info.tsx  image-preview.tsx  index.ts  viewer.test.tsx  viewer.tsx
src/hooks/: use-directory-watcher.test.ts  use-directory-watcher.ts  use-directory.ts  use-file-preview.ts
src/utils/: format.test.ts  format.ts
