[package]
name = "zudo-file-viewer"
version = "0.1.0"
edition = "2021"

[lib]
name = "zudo_file_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "zudo-file-viewer"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", features = ["jpeg", "png", "gif", "webp", "bmp", "tiff", "ico", "avif"] }
base64 = "0.22"
dirs = "6"
notify = "7"
chrono = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }
